* 2014-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 33956: Perform safe flush on socket output stream to not prevent reading returned SMTP return code if SMPT server closes
                      associated connection on its own immediately

* 2014-09-01 - marcus.klein@open-xchange.com

 - Fix for bug 34236: Marked xingsubscribe.properties in open-xchange-subscribe package as a configuration file.

* 2014-09-01 - tobias.friedrich@open-xchange.com

 - Fix for bug 32695: Try to lookup existing stored session during form login if auto-login is enabled

* 2014-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 34211: Properly request next page token using Google API

* 2014-08-28 - marc.arens@open-xchange.com

 - Fix for bug 33476: Silent fallback to LocalRealtimeCleanup, GlobalCleanup is done anyway via new CleanupMembershipListener

* 2014-08-28 - thorben.betten@open-xchange.com

 - Fix for bug 34206: Use proper detection for a thumbnail request

* 2014-08-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 34183: Make infostore driver available once "com.openexchange.infostore" is the only account for the user
 - Fix for bug 34092: Ensure source folder ID is known for event processing when moving files within infostore file storage

* 2014-08-27 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34133: Removed XING relevant properties from the crawler.properties as well as the definition of the crawler itself (xing.yml)

* 2014-08-27 - martin.herfurth@open-xchange.com

 - Fix for bug 33158: Changed date/time label in notification mails.

* 2014-08-27 - tobias.friedrich@open-xchange.com

 - Fix for bug 32994: Map "Job Title" to field "position" for import of Outlook-style .csv-files
 - Fix for bug 33931: Adjust the "created by" and "modified by" properties of contacts in shared folders to the ID of the context
                      administrator in case the user who created those contacts is deleted.

* 2014-08-26 - thorben.betten@open-xchange.com
